# drift

./: .gitignore  CHANGELOG.md  Dockerfile  PATTERN-LOCATION-DISCOVERY.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test  test-export.json  tsconfig.base.json  vitest.workspace.ts
.github/workflows/: ci.yml  native-build.yml  release.yml
crates/: Cargo.toml
crates/drift-core/: Cargo.toml
crates/drift-core/src/parsers/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  php.rs  python.rs  rust_lang.rs  types.rs  typescript.rs
crates/drift-napi/: index.d.ts  index.js  package.json
crates/drift-napi/npm/darwin-arm64/: package.json
crates/drift-napi/npm/darwin-x64/: package.json
crates/drift-napi/npm/linux-arm64-gnu/: package.json
crates/drift-napi/npm/linux-arm64-musl/: package.json
crates/drift-napi/npm/linux-x64-gnu/: package.json
crates/drift-napi/npm/linux-x64-musl/: package.json
crates/drift-napi/npm/win32-x64-msvc/: package.json
crates/drift-napi/src/: lib.rs
docs/designs/: CIBENCH-SPEC.md  DATA-ARCHITECTURE.md  DATA-STORAGE-OPTIMIZATION.md  ENTERPRISE-EXTRACTION-FALLBACK.md  ENTERPRISE-MCP-SERVER.md  ENTERPRISE-VSCODE-EXTENSION.md  HIGH-SIGNAL-LAYERS.md  PATTERN-SYSTEM-CONSOLIDATION.md  SEMANTIC-DATA-ACCESS-ROADMAP.md  TREE-SITTER-PYTHON-PARSER.md
skills/: README.md
skills/atomic-matchmaking/: SKILL.md
skills/backpressure/: SKILL.md
skills/batch-processing/: SKILL.md
skills/checkpoint-resume/: SKILL.md
skills/cloud-storage/: SKILL.md
skills/community-feed/: SKILL.md
skills/data-transformers/: SKILL.md
skills/dead-letter-queue/: SKILL.md
skills/design-tokens/: SKILL.md
skills/distributed-lock/: SKILL.md
skills/environment-config/: SKILL.md
skills/error-sanitization/: SKILL.md
skills/exception-taxonomy/: SKILL.md
skills/file-uploads/: SKILL.md
skills/fuzzy-matching/: SKILL.md
skills/game-loop/: SKILL.md
skills/geographic-clustering/: SKILL.md
skills/graceful-shutdown/: SKILL.md
skills/intelligent-cache/: SKILL.md
skills/job-state-machine/: SKILL.md
skills/leader-election/: SKILL.md
skills/logging-observability/: SKILL.md
skills/metrics-collection/: SKILL.md
skills/middleware-protection/: SKILL.md
skills/mobile-components/: SKILL.md
skills/monorepo-structure/: SKILL.md
skills/prompt-engine/: SKILL.md
skills/provenance-audit/: SKILL.md
skills/pwa-setup/: SKILL.md
skills/resilient-storage/: SKILL.md
wiki/: CLI-Reference.md  Configuration.md  MCP-Tools-Reference.md  Memory-CLI.md
(+12 files in other folders)
