[workspace]
resolver = "2"
members = [
    "drift-core",
    "drift-napi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/driftscan/drift"

[workspace.dependencies]
# Internal
drift-core = { path = "drift-core" }

# Parsing - use compatible versions
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"

# File system
walkdir = "2"
ignore = "0.4"
globset = "0.4"

# Parallelism
rayon = "1.10"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Regex
regex = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# NAPI
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"

# Testing
tempfile = "3"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
