[package]
name = "drift-core"
version = "0.1.0"
edition = "2021"
description = "High-performance code analysis engine for Drift"
license = "MIT"
repository = "https://github.com/driftscan/drift"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Parsing - use compatible versions
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"

# File system
walkdir = "2"
ignore = "0.4"
globset = "0.4"

# Parallelism
rayon = "1.10"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Regex
regex = "1"

# Lazy initialization
once_cell = "1"

# Fast hashing
rustc-hash = "2"

# Small vector optimization
smallvec = "1.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
walkdir = "2"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "full_pipeline"
harness = false
